syntax = "proto3";

package network;
option go_package="./proto";

message Empty {}

message ConnectNetworkRequest {
  uint32 network_id = 1;
  uint32 instance_id = 2;
}

message DisconnectNetworkRequest {
  uint32 network_id = 1;
  uint32 instance_id = 2;
}

service Network {
  rpc ConnectNetwork(ConnectNetworkRequest) returns(Empty);
  rpc DisconnectNetwork(DisconnectNetworkRequest) returns(Empty);
}
